# claude-switchboard

./: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: _diag-find-path.yml  release.yml
docs/: design-system.md  release-checklist.md
docs/superpowers/plans/: 2026-05-06-account-swap-hot-reload.md  2026-05-06-invalid-grant-debug.md  2026-05-07-claude-limits-banner-v0-4-0.md  2026-05-07-rebrand-to-switchboard.md  2026-05-07-throttled-stagger-polling.md  2026-05-07-warmup-and-scheduling.md  2026-05-13-cream-theme.md  (+1 more)
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  pricing.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  branding.rs  cli.rs  commands.rs  lib.rs  logging.rs  main.rs  poll_loop.rs  scheduler_glue.rs
src-tauri/src/auth/: account_identity.rs  exchange.rs  keychain_guardian.rs  mod.rs  oauth_paste_back.rs
src-tauri/src/auth/accounts/: manager.rs
src-tauri/src/auth/claude_code_creds/: macos.rs
src-tauri/src/jsonl_parser/: pricing.rs
src-tauri/src/migration/: autostart.rs  data_dir_copy.rs  legacy_process.rs  mod.rs
src-tauri/src/os_scheduler/: macos.rs  mod.rs  windows.rs
src-tauri/src/scheduler/: catchup.rs  claim.rs  mod.rs  presets.rs
src-tauri/src/store/: mod.rs  queries.rs  schema.sql
src-tauri/src/store/migrations/: 0004_migration_state.sql  0005_warmup.sql
src-tauri/src/usage_api/: client.rs  mod.rs
src-tauri/src/warmup/: api_call.rs  config.rs  errors.rs  mod.rs
src-tauri/tests/: active_slot_no_refresh.rs  auth_exchange.rs  jsonl_record.rs  jsonl_walker.rs  multi_account_fanout.rs  usage_api_client.rs  usage_api_types.rs
src/accounts/: AccountRow.tsx  AccountsPanel.tsx  AccountsSidebar.tsx  AddAccountChooser.tsx  ScheduleSelector.tsx  SwapConfirmCard.tsx  WarmupNowButton.tsx  WarmupToggle.tsx  useAccountManagement.ts
src/components/: UsageSummary.test.tsx  UsageSummary.tsx
src/lib/: branding.test.ts  branding.ts  format.ts  icons.ts  ipc.ts  store.test.ts  store.ts  theme.ts  useActiveModel.ts  window-chrome.ts
src/popover/: CompactPopover.tsx  InstrumentRow.tsx  UsageBar.test.tsx  UsageBar.tsx
src/report/: ExpandedReport.tsx  HeatmapTab.tsx  ModelsTab.tsx  TrendsTab.tsx
src/settings/: AuthPanel.tsx  SettingsPanel.tsx  WarmupSettings.tsx
src/styles/: globals.css  tokens.css
(+30 files in other folders)
