[package]
name = "claude-limits"
version = "0.2.0"
description = "Track your Claude rate limits — 5h, weekly, Opus, Sonnet"
authors = ["Claude Limits contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.89"

[lib]
name = "claude_limits_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
window-vibrancy = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
notify = "7"
notify-debouncer-full = "0.4"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
zeroize = { version = "1", features = ["zeroize_derive"] }
anyhow = "1"
fs2 = "0.4"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2"
directories = "5"
parking_lot = "0.12"
tiny-skia = "0.11"
ttf-parser = "0.21"
png = "0.17"
specta = { version = "=2.0.0-rc.22", features = ["chrono", "serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-positioner = { version = "2.0.0-beta.12", features = ["tray-icon"] }
async-trait = "0.1.89"

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Authorization", "Win32_Foundation"] }
winreg = "0.55"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
mockito = "1"
pretty_assertions = "1"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
